# AI-Native-Book

./: .gitignore  agent_response.md  package-lock.json  specify.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: api_router.py
backend/src/core/: config.py  file_io.py
backend/src/models/: data_models.py
backend/src/services/: __init__.py  chunking_service.py  embedding_service.py  gemini_service.py  indexing_service.py  neon_service.py  qdrant_service.py
backend/tests/integration/: test_api_endpoints.py  test_indexing_process.py
backend/tests/unit/: test_chunking_service.py  test_embedding_service.py  test_qdrant_service.py
book_source/: docusaurus.config.js  package-lock.json  package.json
book_source/cypress/e2e/: homepage.cy.js  theme.cy.js
book_source/docs/: 01-intro.md  module01.md  module02.md  module03.md  module04.md  project.md
book_source/src/: types.ts
book_source/src/components/: ChatbotPanel.css  ChatbotPanel.tsx  ChatbotWidget.css  ChatbotWidget.tsx  (+2 more)
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  types.ts
specs/1-create-specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-docusaurus-ui-restyle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-embed-chatbot-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+46 files in other folders)
